# make-market

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  workspace.toml
.github/workflows/: main.yml
bases/make_market/setup_product_database/: __init__.py  setup_product_database.py  simulate_changes.py
bases/make_market/ws_server/: __init__.py  core.py  quote.py  requests_types.py  server.py
components/make_market/configuration_service/: __init__.py
components/make_market/dict_zip/: __init__.py
components/make_market/historical_quotes/: __init__.py  protocol.py  random.py  yfinance.py
components/make_market/log/: __init__.py  core.py
components/make_market/messaging/: __init__.py  decimals.py  schemas.py  status.py
components/make_market/orderbook/: __init__.py  core.py
components/make_market/producer_consumer/: __init__.py  protocols.py  zero_mq.py  zero_mq_async.py
components/make_market/product_config/: __init__.py  fetch.py  schema.py  watch_collection_changes.py
components/make_market/settings/: __init__.py  models.py
components/make_market/ws_client/: __init__.py  asyncro.py  client.py  run_client.py  threaded.py
development/: aiozmq.py  development_producer.py  try_beanie.py  try_pymongo.py
development/ws_server/: core.py  test_client_connection.py  test_core.py
development/zero-mq/: async.py  asynchronous.py  espresso.py  espresso_and_async.py  just-pub-sub.py  working_example_with_both_threaded_and_sync.py  wuclient.py  wuserver.py
projects/: README.md
projects/product_config_db/: docker-compose.yml  pyproject.toml
test/bases/make_market/product_config/: test_fetch.py
test/bases/make_market/setup_product_database/: test_core.py
test/bases/make_market/ws_server/: test_client_connection.py  test_core.py
test/components/make_market/configuration_service/: test_core.py
test/components/make_market/dict_zip/: test_dict_zip.py
test/components/make_market/historical_quotes/: test_yfinance.py
test/components/make_market/log/: test_core.py
test/components/make_market/messaging/: test_decimals.py  test_raw_quote_deserialize.py  test_schemas.py  test_status.py
test/components/make_market/orderbook/: test_core.py
test/components/make_market/producer_consumer/: test_core.py  test_zero_mq.py
test/components/make_market/product_config/: test_fetch.py
test/components/make_market/settings/: test_core.py  test_settings.py
test/components/make_market/ws_client/: test_core.py  test_ws_client.py
